force-app/main/default/objects/Fundraising_Action__c/Fundraising_Action__c.object-meta.xml
<CustomObject>
    <label>Fundraising Action</label>
    <nameField>
        <displayFormat>FA-{000000}</displayFormat>
        <label>Fundraising Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fundraising Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>