force-app/main/default/objects/Fundraising_Action__c/fields/Amount_Raised__c.field-meta.xml
<CustomField>
    <fullName>Amount_Raised__c</fullName>
    <label>Amount Raised</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>