force-app/main/default/objects/Fundraising_Action__c/fields/Associated_Military_Request__c.field-meta.xml
<CustomField>
    <fullName>Associated_Military_Request__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Associated Military Request</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Military_Request__c.Visibility__c</field>
            <operation>equals</operation>
            <value>Visible to Volunteers</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Military_Request__c</referenceTo>
    <relationshipLabel>Fundraising Actions</relationshipLabel>
    <relationshipName>Fundraising_Actions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>