force-app/main/default/objects/Fundraising_Action__c/fields/Fundraising_Goal__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_Goal__c</fullName>
    <label>Fundraising Goal</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>