force-app/main/default/objects/Fundraising_Action__c/fields/Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Volunteer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Volunteer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Fundraising_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>